# uv-demo

./: .pre-commit-config.yaml  README.md  biome.jsonc  justfile  main.py  makefile  pyproject.toml  tox.ini
.github/actions/install-deps/: action.yaml
.github/workflows/: code-quality.yaml  pub.yaml  python-publish.yaml  qa.yaml
docs/: search.js  uv_demo.html
scripts/: stream-demo.py
src/uv_demo/: __init__.py  greetings.py
tests/: conftest.py  test_greetings.py
